<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rovalp</name>
  <version>0.0.0</version>
  <description>Package description for Rovalp</description>
  <maintainer email="muratalkaptan1@gmail.com">Murat</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build & exec dependencies -->
  <depend>pluginlib</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Runtime dependencies -->
    <exec_depend>ros2_control</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>diff_drive_controller</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>hardware_interface</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>rclpy</exec_depend>
  </export>
</package>

